feat: disable option of the time de & a

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7194,3 +7194,6 @@ a.text-dark:hover, a.text-dark:focus {
 td select,
 td input {
   width: 90%; }
+
+select option:disabled {
+  background-color: #ddd; }
